# hng-14-Backend

stage-1/: .env.sample  .gitignore  README.md  README.task.md  main.py  pyproject.toml
stage-2/: pyproject.toml  sqlite.db
stage-2/app/: database.py  dependency.py  main.py  model.py  util.py
stage-2/app/routers/: profiles.py
stage-3/: README.md  pyproject.toml  requirements.txt  seed.py  sqlite.db
stage-3/app/: database.py  main.py  model.py  util.py
stage-3/app/routers/: profiles.py
