[project]
name = "stage-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.135.3",
    "httpx>=0.28.1",
    "sqlmodel>=0.0.38",
    "uuid7-standard>=1.1.0",
]
[tool.fastapi]
entrypoint = "app.main:app"
